--- a/src/components/Cards/Cards.scss
+++ b/src/components/Cards/Cards.scss
@@ -3,7 +3,6 @@
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-gap: 40px;
 
-
   @media (max-width: 1920px) {
     grid-template-columns: 1fr 1fr 1fr 1fr;
   }
@@ -18,14 +17,11 @@
 
   @media (max-width: 700px) {
     grid-template-columns: 1fr;
-
   }
+}
 
-  @media (max-width: 320px) {
-    grid-template-columns: 1fr;
-
-
-  }
+.card-wrapper {
+  padding-bottom: 100px;
 }
 
 .card-item {
@@ -98,9 +94,9 @@
 
     span {
       padding: 2px 4px;
+      cursor: pointer;
     }
   }
-
 
   &__image {
     img {
@@ -110,13 +106,6 @@
 
   &__favorites-icon {
     width: 20px;
-
-    path {
-      &:hover {
-
-      }
-    }
-
   }
 }
 
