--- a/src/components/SelectBar/SelectBar.scss
+++ b/src/components/SelectBar/SelectBar.scss
@@ -14,25 +14,14 @@
 }
 
 .select-price {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  height: 55px;
   margin-right: 24px;
-  width: 300px;
-
-  @media (max-width: 700px) {
-    margin-right: 0;
-    margin-bottom: 20px;
-    width: auto;
-  }
 }
 
-.select-material {
+.select-price, .select-material {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 55px;
+  height: 62px;
   width: 300px;
 
   @media (max-width: 700px) {
@@ -42,8 +31,26 @@
   }
 }
 
-.v-select {
-  font-family: "SF UI Text Regular", sans-serif;
+#sorting-select, #filter-select {
+
+  .vs__dropdown-toggle {
+    border: none;
+    height: 40px;
+  }
+
+  .vs__search {
+    font-family: "SF UI Text Regular", sans-serif;
+    padding: 0 14px;
+  }
+
+  .vs__open-indicator {
+    fill: black;
+    margin: 2px 14px 0 0;
+  }
+
+  .vs--searchable .vs__dropdown-toggle {
+      cursor: pointer;
+  }
 }
 
 .select-input {
